update to minipackage

--- a/notebooks/activation-test.ipynb
+++ b/notebooks/activation-test.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg \n",
-    "Pkg.activate(@__DIR__)"
+    "using Pkg; pkg\"st\" # Default state "
    ]
   },
   {
@@ -16,7 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkg\"st\""
+    "pkg\"add https://github.com/ubcecon/QuantEconLecturePackages.jl\" # add our package \n",
+    "pkg\"activate QuantEconLecturePackages\" \n",
+    "pkg\"instantiate\"\n",
+    "pkg\"precompile\""
    ]
   },
   {
@@ -25,28 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkg\"instantiate\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using QuantEcon\n",
-    "pathof(QuantEcon)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Deactivate and see if the state changes. \n",
-    "pkg\"activate\"\n",
-    "pkg\"st\""
+    "pkg\"st\" # see the new state"
    ]
   }
  ],
