--- a/notebooks/activation-test.ipynb
+++ b/notebooks/activation-test.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg; pkg\"st\" # Default state "
+    "using Pkg\n",
+    "pkg\"st\""
    ]
   },
   {
@@ -15,19 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkg\"add https://github.com/ubcecon/QuantEconLecturePackages.jl\" # add our package \n",
-    "pkg\"activate QuantEconLecturePackages\" \n",
-    "pkg\"instantiate\"\n",
-    "pkg\"precompile\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pkg\"st\" # see the new state"
+    "pkg\"activate QuantEconLecturePackages\"\n",
+    "pkg\"st\""
    ]
   }
  ],
