Updated project files and activation test

--- a/notebooks/activation-test.ipynb
+++ b/notebooks/activation-test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "pkg\"st\""
+    "Pkg.activate(@__DIR__); #Activate project local to notebook"
    ]
   },
   {
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkg\"activate QuantEconLecturePackages\"\n",
     "pkg\"st\""
    ]
   }
