--- a/notebooks/activation-test.ipynb
+++ b/notebooks/activation-test.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(@__DIR__); #Activate project local to notebook"
+    "Pkg.activate(@__DIR__); #Activate project local to notebook\n",
+    "pkg\"instantiate\"\n",
+    "pkg\"st\""
    ]
   },
   {
@@ -16,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkg\"st\""
+    "pkg\"instantiate\" #Instantiate if required"
    ]
   }
  ],
