--- a/rst_files/_static/quant-econ.bib
+++ b/rst_files/_static/quant-econ.bib
@@ -1423,3 +1423,12 @@ publisher = {Holden-Day}}
     year={2013},
     institution={National Bureau of Economic Research}
 }
+
+@book{Shiryaev1995,
+    title={Probability},
+    author={Shiryaev, A N},
+    year={1995},
+    publisher={Springer},
+    edition={2nd},
+    series={Graduate Texts in Mathematics}
+}   
