--- a/rst_files/_static/quant-econ.bib
+++ b/rst_files/_static/quant-econ.bib
@@ -3,6 +3,16 @@ QuantEcon Bibliography File used in conjuction with sphinxcontrib-bibtex package
 Note: Extended Information (like abstracts, doi, url's etc.) can be found in quant-econ-extendedinfo.bib file in _static/
 ###
 
+@book{stepanov_mathematics_2014,
+      author = {Stepanov, Alexander A. and Rose, Daniel E.},
+      date = {2014},
+      location = {Upper Saddle River, NJ},
+      title = {From mathematics to generic programming},
+      isbn = {978-0-321-94204-3},
+      pagetotal = {293},
+      publisher = {Addison-Wesley},
+      keywords = {Computer algorithms, Generic programming (Computer science), Mathematics}
+}
 
 @article{Samuelson1939,
   title = {Interactions Between the Multiplier Analysis
@@ -32,7 +42,6 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
     number={4},
     pages={627-656},
     month={October}}
-
 
 @incollection{Cagan,
   author = {Cagan, Philip},
