--- a/rst_files/_static/quant-econ.bib
+++ b/rst_files/_static/quant-econ.bib
@@ -5,7 +5,7 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
 
 @book{stepanov_mathematics_2014,
       author = {Stepanov, Alexander A. and Rose, Daniel E.},
-      date = {2014},
+      year = {2014},
       location = {Upper Saddle River, NJ},
       title = {From mathematics to generic programming},
       isbn = {978-0-321-94204-3},
