Fix bib entries

--- a/rst_files/_static/quant-econ.bib
+++ b/rst_files/_static/quant-econ.bib
@@ -723,7 +723,7 @@ publisher = {Holden-Day}}
 }
 
 @incollection{HansenEppleRoberds1985,
-    author  = {Hansen, Lars. P., Dennis Epple, and Will Roberds},
+    author  = {Hansen, Lars. P. and Epple, Dennis and Roberds, Will},
     booktitle = {Energy, Foresight, and Strategy},
     edition = {Vol 1},
     publisher = {Resources for the Future},
@@ -1045,7 +1045,7 @@ publisher = {Holden-Day}}
 }
 
 @article{PearlmanCurrieLevine1986,
-    author = {Pearlman, J.G., D.A. Currie, and P.L. Levine},
+    author = {Pearlman, J.G. and Currie, D.A. and P.L. Levine},
     title = {Rational expectations with partial information},
     journal = {Economic Modeling},
     volume = {3},
@@ -1440,4 +1440,4 @@ publisher = {Holden-Day}}
     publisher={Springer},
     edition={2nd},
     series={Graduate Texts in Mathematics}
-}   
+}
