citations changed in bibfile

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -3,7 +3,7 @@ QuantEcon Bibliography File used in conjuction with sphinxcontrib-bibtex package
 Note: Extended Information (like abstracts, doi, url's etc.) can be found in quant-econ-extendedinfo.bib file in _static/
 ###
 
-@book{stepanov_mathematics_2014,
+@book{stepanov-mathematics-2014,
       author = {Stepanov, Alexander A. and Rose, Daniel E.},
       year = {2014},
       location = {Upper Saddle River, NJ},
@@ -261,7 +261,7 @@ publisher = {Holden-Day}}
   publisher={Oxford Blackwell}
 }
 
-@article{Hans_Scheink_2009,
+@article{hans-scheink2009,
   author={Lars Peter Hansen and Jose A. Scheinkman},
   title={Long-Term Risk: An Operator Approach},
   journal={Econometrica},
@@ -273,7 +273,7 @@ publisher = {Holden-Day}}
 }
 
 
-@book{Hans_Sarg_book_2016,
+@book{hans-sarg-book2016,
   author = {Lars Peter Hansen and Thomas J. Sargent},
   year ={2017},
   title = {Risk, Uncertainty, and Value},
@@ -495,7 +495,7 @@ publisher = {Holden-Day}}
     year    = {1994}
 }
 
-@article{AMSS_2002,
+@article{amss2002,
   author={S. Rao Aiyagari and Albert Marcet and Thomas J. Sargent and Juha Seppala},
   title={{Optimal Taxation without State-Contingent Debt}},
   journal={Journal of Political Economy},
@@ -1156,7 +1156,7 @@ publisher = {Holden-Day}}
   url={https://ideas.repec.org/a/bla/jfinan/v59y2004i4p1481-1509.html}
 }
 
-@Article{HHL_2008,
+@Article{hhl2008,
   author={Lars Peter Hansen and John C. Heaton and Nan Li},
   title={{Consumption Strikes Back? Measuring Long-Run Risk}},
   journal={Journal of Political Economy},
@@ -1170,7 +1170,7 @@ publisher = {Holden-Day}}
   abstract={ We characterize and measure a long-term risk-return trade-off for the valuation of cash flows exposed to fluctuations in macroeconomic growth. This trade-off features risk prices of cash flows that are realized far into the future but continue to be reflected in asset values. We apply this analysis to claims on aggregate cash flows and to cash flows from value and growth portfolios by imputing values to the long-run dynamic responses of cash flows to macroeconomic shocks. We explore the sensitivity of our results to features of the economic valuation model and of the model cash flow dynamics. (c) 2008 by The University of Chicago. All rights reserved.},
   url={https://ideas.repec.org/a/ucp/jpolec/v116y2008i2p260-302.html}
 }
-@Article{Hansen_2007,
+@Article{hansen2007,
   author={Lars Peter Hansen},
   title={{Beliefs, Doubts and Learning: Valuing Macroeconomic Risk}},
   journal={American Economic Review},
@@ -1185,7 +1185,7 @@ publisher = {Holden-Day}}
   url={https://ideas.repec.org/a/aea/aecrev/v97y2007i2p1-30.html}
 }
 
-@Article{Lucas_2003,
+@Article{lucas2003,
   author={Lucas, Jr., Robert E},
   title={{Macroeconomic Priorities}},
   journal={American Economic Review},
