--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -1141,7 +1141,7 @@ publisher = {Holden-Day}}
 }
 
 
-@Article{bansal-yaron2004,
+@Article{bansalyaron2004,
   author={Ravi Bansal and Amir Yaron},
   title={{Risks for the Long Run: A Potential Resolution of Asset Pricing Puzzles}},
   journal={Journal of Finance},
