fix bibtex error (add UBC to Perla2019 ref)

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -18,7 +18,8 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
   Title                    = {A Model of Product Awareness and Industry Life Cycles},
   Author                   = {Jesse Perla},
   Year                     = {2019},
-  Type                     = {Working Paper}
+  Type                     = {Working Paper},
+  Institution              = {University of British Columbia}
 }
 
 @article{Samuelson1939,
