--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -14,6 +14,14 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
       keywords = {Computer algorithms, Generic programming (Computer science), Mathematics}
 }
 
+@TechReport{Perla2019,
+  Title                    = {A Model of Product Awareness and Industry Life Cycles},
+  Author                   = {Jesse Perla},
+  Year                     = {2019},
+  Type                     = {Working Paper},
+  Institution              = {University of British Columbia}
+}
+
 @article{Samuelson1939,
   title = {Interactions Between the Multiplier Analysis
   and the Principle of Acceleration},
