Reorganization of the SDE stuff in progress

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -21,7 +21,29 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
   Type                     = {Working Paper},
   Institution              = {University of British Columbia}
 }
-
+@article{heffernan2005perspectives,
+  title={Perspectives on the basic reproductive ratio},
+  author={Heffernan, Jane M and Smith, Robert J and Wahl, Lindi M},
+  journal={Journal of the Royal Society Interface},
+  volume={2},
+  number={4},
+  pages={281--293},
+  year={2005},
+  publisher={The Royal Society London}
+}
+@techreport{NBERw27128,
+ title = "Estimating and Simulating a SIRD Model of COVID-19 for Many Countries, States, and Cities",
+ author = "Fernández-Villaverde, Jesús and Jones, Charles I",
+ institution = "National Bureau of Economic Research",
+ type = "Working Paper",
+ series = "Working Paper Series",
+ number = "27128",
+ year = "2020",
+ month = "May",
+ doi = {10.3386/w27128},
+ URL = "http://www.nber.org/papers/w27128",
+ abstract = {We use data on deaths in New York City, Madrid, Stockholm, and other world cities as well as in various U.S. states and various countries and regions to estimate a standard epidemiological model of COVID-19. We allow for a time-varying contact rate in order to capture behavioral and policy-induced changes associated with social distancing. We simulate the model forward to consider possible futures for various countries, states, and cities, including the potential impact of herd immunity on re-opening. Our current baselinemortality rate (IFR) is assumed to be 1.0% but we recognize there is substantial uncertainty about this number. Our model fits the death data equally well with alternative mortality rates of 0.5% or 1.2%, so this parameter is unidentified in our data. However, its value matters enormously for the extent to which various places can relax social distancing without spurring a resurgence of deaths.},
+}
 @article{Samuelson1939,
   title = {Interactions Between the Multiplier Analysis
   and the Principle of Acceleration},
